# anura

./: .gitattributes  .gitignore  .gitmodules  BRANCH_RATIONALE.md  CMakeLists.txt  INSTALL  LICENSE  Makefile  Makefile.common  Makefile.debian-wheezy  Makefile.mingw  Makefile.novcpkg  Makefile.vcpkg  MinGW-build-instructions.txt  README.md  SConstruct  anura-linux-run.sh  anura-mac-run.sh  anura.sh  eris_unit_tests.sh  lua_unit_tests.sh  make-tileset.pl  master-config.cfg  quickmake.sh  restart-citadel.sh  steam_appid.txt  vcpkg.json
.github/: dependabot.yaml
.github/workflows/: pr-dependabot-auto-approve.yaml  pr-dependabot-auto-merge.yaml  pr-smoketest-debian.yaml  pr-smoketest-fedora.yaml  pr-smoketest-opensuse-leap.yaml  pr-smoketest-ubuntu.yaml  pr-unit-tests-dynamic-linux.yaml  pr-unit-tests-static-linux.yaml  pr-unit-tests-static-macos.yaml  pr-unit-tests-static-windows.yaml  push-build-linux.yaml  push-static-analysis-dynamic-linux.yaml  push-test-debian.yaml  push-test-ubuntu.yaml  push-unit-tests-dynamic-linux.yaml  push-unit-tests-static-windows.yaml
MacOS/: README.md  Read Me.txt
MacOS/Frogatto.xcodeproj/: project.pbxproj
MacOS/Resources/: Info.plist
MacOS/dylibs/: libboost_date_time.dylib  libboost_filesystem.dylib  libboost_iostreams.dylib  libboost_locale.dylib  libboost_regex.dylib  libboost_system.dylib  libcairo.2.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libglib-2.0.0.dylib  libintl.8.dylib  libogg.0.dylib  libpixman-1.0.dylib  libpng16.16.dylib  libvorbis.0.dylib  libvorbisfile.3.dylib
MacOSJet/: Read Me.txt
MacOSJet/Frogatto.xcodeproj/: project.pbxproj
MacOSJet/dylibs/: libboost_filesystem.dylib  libboost_iostreams.dylib  libboost_regex.dylib  libboost_system.dylib
MacOS_legacy/Resources/: Info.plist
buildsystem/linux-dynamic/: CMakeLists.txt
buildsystem/linux-steam/: CMakeLists.txt
cmake-includes/modules/: FindGLM.cmake
cmake-includes/silence-warnings/: CMakeLists.txt
data/: base_fonts.cfg  default-animation.cfg  editor-tools.cfg  editor-widgets.cfg  editor_scripts.cfg  fonts.cfg  fonts.ja.cfg  fonts.ko.cfg  fonts.zh_CN.cfg  functions-geometry.cfg  functions-list.cfg  functions-math.cfg  functions.cfg  gui-elements.cfg  gui.cfg  languages.cfg  shaders.cfg  stats-server.json  types-custom.cfg  types.cfg  user_agent.css
data/classes/: debug.cfg  json.cfg
data/fonts/: OFL.txt  unifont-LICENSE.txt
data/fonts-bitmap/: dialog_font.cfg  label_font.cfg
data/level/: empty.cfg  kstest1.cfg  titlescreen.cfg
data/object_templates/: fish.cfg
data/objects/: dummy_player.cfg
misc_res/: console-history.poc_20170824_console_breakage.anura_history_breaking_anura.cfg
modules/: frogatto4
modules/empty_test_module/: module.cfg
modules/frogatto4_dependant_test_module/: module.cfg
modules/gui/: module.cfg
modules/hex/: color_shift.py  make_sprites.py  module.cfg
modules/icons/: license.txt  module.cfg
modules/iso/: module.cfg
modules/lib_2d/: module.cfg
modules/phydemo/: module.cfg
modules/projection_test/: module.cfg
modules/tbs/: module.cfg
src/: 1fbo_scene.hpp  Color.cpp  Color.hpp  ColorTransform.cpp  ColorTransform.hpp  IMG_savepng.cpp  LICENSE  LayerBlitInfo.cpp  LayerBlitInfo.hpp  NSWindowswizzler.m  ParticleSystemWidget.cpp  ParticleSystemWidget.hpp  SConscript  SceneNodeCallable.hpp  SceneObjectCallable.cpp  SceneObjectCallable.hpp  StackWalker.cpp  StackWalker.h  TextureObject.cpp  TextureObject.hpp  VoronoiDiagramGenerator.cpp  VoronoiDiagramGenerator.h  achievements.cpp  achievements.hpp  animation_creator.cpp  animation_creator.hpp  animation_preview_widget.cpp  animation_preview_widget.hpp  animation_widget.cpp  animation_widget.hpp  anura-resouces.rc  anura_shader.cpp  anura_shader.hpp  array_callable.hpp  asserts.cpp  asserts.hpp  auto_update_window.cpp  auto_update_window.hpp  b2d_ffl.cpp  b2d_ffl.hpp  (+522 more)
src/eris/: FILEFORMAT  SConscript  eris.cpp  eris.h  lgc.cpp  lua.cpp  lua_utilities.h  luac.cpp  luaconf.h  test_persist.cpp  test_unpersist.cpp
src/hex/: hex.hpp  hex_fwd.hpp  hex_helper.cpp  hex_helper.hpp  hex_loader.cpp  hex_loader.hpp  hex_logical_fwd.hpp  hex_logical_tiles.cpp  hex_logical_tiles.hpp  hex_map.cpp  hex_map.hpp  hex_mask.cpp  hex_mask.hpp  hex_object.cpp  hex_object.hpp  hex_pathfinding.cpp  hex_pathfinding.hpp  hex_renderable.cpp  hex_renderable.hpp  hex_renderable_fwd.hpp  hex_tile.cpp  hex_tile.hpp  tile_rules.cpp  tile_rules.hpp
src/imgui_additions/: imconfig.h  imconfig_anura.h  imgui_custom.cpp  imgui_custom.h  spline_simple.h
src/kre/: AlignedAllocator.hpp  AttributeSet.cpp  AttributeSet.hpp  AttributeSetOGL.cpp  AttributeSetOGL.hpp  AttributeSetOpenGL.hpp  Blend.cpp  Blend.hpp  BlendModeScope.cpp  BlendModeScope.hpp  BlendOGL.cpp  BlendOGL.hpp  Blittable.cpp  Blittable.hpp  CameraObject.cpp  CameraObject.hpp  Canvas.cpp  Canvas.hpp  CanvasOGL.cpp  CanvasOGL.hpp  ClipScope.cpp  ClipScope.hpp  ClipScopeOGL.cpp  ClipScopeOGL.hpp  Color.cpp  Color.hpp  ColorScope.cpp  ColorScope.hpp  Cursor.cpp  Cursor.hpp  Depth.cpp  Depth.hpp  DisplayDevice.cpp  DisplayDevice.hpp  DisplayDeviceFwd.hpp  DisplayDeviceOGL.cpp  DisplayDeviceOGL.hpp  DisplayDeviceOGLFixed.cpp  DisplayDeviceOGLFixed.hpp  DisplayDeviceOpenGL.cpp  (+137 more)
src/lobby/: Makefile  lobby-config.cfg  shared_data.hpp
src/svg/: color.cpp  color.hpp  easy_svg.cpp  easy_svg.hpp  geometry.hpp  geometry.inl  logger.cpp  logger.hpp  svg_attribs.cpp  svg_attribs.hpp  svg_container.cpp  svg_container.hpp  svg_element.cpp  svg_element.hpp  svg_fwd.cpp  svg_fwd.hpp  svg_gradient.cpp  svg_gradient.hpp  svg_length.cpp  svg_length.hpp  uri.hpp  (+15 more)
update/: progress.cfg  update.cfg
utils/: Anura.sublime-syntax  Query Documentation.txt  Useful Utilities.txt  bash_autocomplete.sh  bash_autocomplete_remove.sh  bash_autocomplete_setup.sh  font-char-rect-extractor.html  list_of_stats_files_downloader.py  make-tileset-no-fill.pl  make-tileset.pl  msvc_cast.snippet  old_tile_map_merge.py  test-level-save-load.zsh
windows/: README.md  anura.sln  anura.vcxproj  anura.vcxproj.filters  build_copy_files.bat  excluded_from_build_files.txt
(+535 files in other folders)
